# torch-compile-lab

./: Makefile  README.md  pyproject.toml
src/: compile_effect.py
tests/: test_hh_model.py
