[project]
name = "torch-compile-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentencepiece>=0.2.0",
    "tabulate>=0.9.0",
    "transformers[torch]>=4.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
